<resources>
    <string name="app_name" translatable="false">Quotation Shake</string>

    <string name="bt_getquot_st">GET QUOTATIONS</string>
    <string name="title_getquot">Random quotations</string>

    <string name="bt_favquot_st">FAVOURITE QUOTATIONS</string>
    <string name="title_favquot">Favourite quotations</string>

    <string name="bt_settings_st">SETTINGS</string>
    <string name="title_settings">Settings</string>

    <string name="bt_about_st">ABOUT</string>
    <string name="title_about">About</string>

    <string name="about_info">Quotation Shake by \n\n Ferran and Coque\n\n
        ferdemar@inf.upv.es\n rojarcho@inf.upv.es\n\n2k19</string>

    <string name="bt_author_info">Author Info</string>

    <string name="tv_quote">Hello %1s!\nPress "Refresh" to get a new quotation</string>

    <string name="tv_sample_quote">Sample quotation %1$d</string>

    <string name="tv_sample_author">Sample author %1$d</string>

    <string name="st_username">Name to identify the user</string>

    <string name="st_name">Insert your name</string>
    <string name="st_name2">Name</string>

    <string name="st_language">Language of the quotations</string>

    <string name="st_httpmethod">HTTP method to be used in Web Requests</string>

    <string name="st_get">GET</string>

    <string name="st_post">POST</string>
    <string name="st_english">English</string>
    <string name="st_russian">Russian</string>
    <string name="st_add">Add</string>
    <string name="st_refresh">Refresh</string>
    <string name="st_clearall">Clear all</string>
    <string name="st_alert_clearalldialog">Are you sure that you want to delete ALL your favourite quotations?</string>
    <string name="st_alert_dialog">Are you sure that you want to delete this quotation?</string>

    <string name="st_category_web">Category web services</string>

    <string name="st_default_username">Nameless One</string>

    <string name="st_edit_text_preference_username_title">Username</string>
    <string name="st_edit_text_preference_username_hint">Name that identifies the user</string>

    <string name="st_preference_category_web_services_title">
        Web Service
    </string>

    <string name="st_list_preference_language_title">Quotation Language</string>
    <string name="st_list_preference_language_hint">
        Quotations will be received in the selected language
    </string>

    <string name="st_list_preference_request_method_title">HTTP request method</string>
    <string name="st_list_preference_request_method_hint">
        Web requests will be performed using the selected HTTP method
    </string>
    
    <string name="st_preference_category_databases_title">Databases</string>
    <string name="st_list_preference_database_access_method_title">
        Database access method
    </string>
    <string name="st_list_preference_database_access_method_hint">
        Database will be accessed following the selected method
    </string>

    <string name="st_database_method_room">Room</string>
    <string name="st_database_method_sqliteopenhelper">SQLiteOpenHelper</string>





</resources>
