<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/bt_getquot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="@color/button_color"
            android:layout_weight="1"
            android:onClick="goTo"
            android:textColor="@color/button_text_color"
            android:text="@string/bt_getquot_st" />

        <Button
            android:id="@+id/bt_favquot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="@color/button_color"
            android:layout_weight="1"
            android:onClick="goTo"
            android:textColor="@color/button_text_color"
            android:text="@string/bt_favquot_st" />

        <Button
            android:id="@+id/bt_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="@color/button_color"
            android:layout_weight="1"
            android:onClick="goTo"
            android:textColor="@color/button_text_color"
            android:text="@string/bt_settings_st" />

        <Button
            android:id="@+id/bt_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/button_color"
            android:layout_weight="1"
            android:onClick="goTo"
            android:textColor="@color/button_text_color"
            android:text="@string/bt_about_st" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>